--- a/style.css
+++ b/style.css
@@ -32,3 +32,25 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.img-box .bullets {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.img-box .bullets i {
+    display: inline-block;
+    margin-right: 3px;
+    color: rgb(255, 255, 255);
+    opacity: 0.35;
+}
+
+.img-box .bullets i:last-child {
+    margin: 0;
+}
+
+.img-box .bullets i.fas {
+    opacity: 0.7;
+}
