--- a/style.css
+++ b/style.css
@@ -5,11 +5,17 @@
 }
 
 .container {
+    height: calc(100vh - 20px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.slider-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-
 }
 
 .prev i, .next i {
@@ -53,4 +59,10 @@
 
 .img-box .bullets i.fas {
     opacity: 0.7;
+}
+
+button {
+    height: 20px;
+    display: block;
+    margin: auto;
 }
